Save changes to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>Talent-Forge - Land your dream Job!</title>
-=======
-    <title>Talent Forged - Land your dream Job!</title>
->>>>>>> 26b3a48 (Initial project setup)
+    <title>Talent-Forge - Land your dream Job!</title> <!-- Choose this title or the other -->
   </head>
   <body>
     <div id="root"></div>
